<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SWAGer</string>
    <string name="title_books">Books</string>
    <string name="title_section2">Starred</string>
    <string name="title_section3">Checked Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_share">Share</string>
    <string name="action_seed">Seed</string>
    <string name="no_books">no books loaded</string>
    <string name="author">Author</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="last_checked_out">Checked Out</string>
    <string name="publisher">Publisher</string>
    <string name="title">Title</string>
    <string name="required">Required</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="name">Name checking out</string>
    <string name="confirm_delete_all">Delete all books?</string>
    <plurals name="undo_delete_book">
        <item quantity="one">Undo delete book</item>
        <item quantity="other">Undo delete books</item>
    </plurals>
    <string name="error_book_create">Unable to create book</string>
    <string name="error_book_edit">Unable to update book</string>
    <string name="error_book_checkout">Unable to checkout book</string>
    <string name="error_books_load">Unable to load books</string>
    <string name="error_books_delete">Unable to delete</string>
    <string name="updating_book">Updating book...</string>
    <string name="creating_book">Creating book...</string>
    <string name="checking_out_book">Checking out...</string>
    <string name="deleting_book">Deleting...</string>
    <string name="book_created">Book created</string>
    <string name="book_updated">Book updated</string>
    <string name="book_checked_out">Checked out</string>
    <string name="book_deleted">Deleted</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="share_subject">SWAGer, the only way to SWAG</string>
    <string name="share">I have SWAGer and thought you might be interested in %s</string>
</resources>


