<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_checkout_book"
        android:showAsAction="always"
        android:title="@string/action_checkout" />

    <item
        android:id="@+id/action_share_book"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />

    <item
        android:id="@+id/action_edit_book"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit" />

    <item
        android:id="@+id/action_delete_book"
        android:showAsAction="never"
        android:title="@string/action_delete" />
</menu>