<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding">

        <TextView
            android:text="@string/title"
            style="@style/BodyTextEditTitle" />

        <EditText
            android:id="@+id/book_title"
            android:hint="@string/title"
            style="@style/StandardEdit" />

        <TextView
            android:text="@string/author"
            style="@style/BodyTextEditTitle" />

        <EditText
            android:id="@+id/book_author"
            android:hint="@string/author"
            style="@style/StandardEdit" />

        <TextView
            android:text="@string/publisher"
            style="@style/BodyTextEditTitle" />

        <EditText
            android:id="@+id/book_publisher"
            android:hint="@string/publisher"
            style="@style/StandardEdit" />

        <TextView
            android:text="@string/categories"
            style="@style/BodyTextEditTitle" />

        <EditText
            android:id="@+id/book_categories"
            android:hint="@string/categories"
            style="@style/StandardEdit" />
    </LinearLayout>

</ScrollView>