<?xml version="1.0" encoding="utf-8"?>


<!--Source imported from https://github.com/nirhart/ParallaxScroll-->

<dashsample.swager.third_party_views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:parallax_factor="1.9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/footer_shadow"
        >


        <TextView
            style="@style/HeadlineText"
            android:layout_height="200dp"
            android:id="@+id/book_title"
            android:layout_width="match_parent"

            android:gravity="center"
            tools:text="TITLE" />


        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            >

            <TextView
                android:text="@string/author"
                style="@style/BodyTextMajor" />


            <TextView
                android:id="@+id/book_author"
                tools:text="PLACEHOLDER"
                style="@style/BodyTextMinor" />

            <TextView
                android:text="@string/publisher"
                style="@style/BodyTextMajor" />

            <TextView
                android:id="@+id/book_publisher"
                tools:text="PLACEHOLDER"
                style="@style/BodyTextMinor" />

            <TextView
                android:text="@string/categories"
                style="@style/BodyTextMajor" />

            <TextView
                android:id="@+id/book_categories"
                tools:text="PLACEHOLDER"
                style="@style/BodyTextMinor" />

            <TextView
                android:text="@string/last_checked_out"
                style="@style/BodyTextMajor" />

            <TextView
                android:id="@+id/book_last_checked_out"
                tools:text="PLACEHOLDER"
                style="@style/BodyTextMinor" />
        </LinearLayout>
    </LinearLayout>

</dashsample.swager.third_party_views.ParallaxScrollView>